--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,15 @@ services:
       - ./:/go/src/github.com/toshiykst/golang-rest-api
     ports:
       - "8080:8080"
+  db:
+    build: ./mysql/
+    volumes:
+      - ./mysql/db:/docker-entrypoint-initdb.d
+      - ./mysql/data:/var/lib/mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: golang_rest_api
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password
+    ports:
+      - "3306:3306"
